<resources>

    <string name="app_name">Slapjack</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_main">Shall We Play A Game?</string>
    <string name="save_config">Save As Default Configuration</string>
    <string name="begin_game">Begin Game</string>
    <string name="name_label">Name:</string>
    <string name="server_ip_code">Server\'s IP Code:</string>
    <string name="remove_player">Remove Player</string>
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>
    <string name="guest">Guest</string>
    <string name="save_config_as_default">Save this Configuration as the Default</string><string name="start_the_game">Start Game!</string>
    
    <string name="dialog_continue_label">Continue Playing Game</string>
    <string name="dialog_quit_label">Quit</string>
    <string name="dialog_quit_question">Do you really want to quit?</string>
    <string name="local_tab">Local Game</string>
    <string name="remote_tab">Remote Game</string>
    <string name="discard">Discard</string>
    <string name="goOut">Go Out</string>
    <string name="quit">Quit</string>
    <string name="swap">Swap</string>
    <string name="drawPile">Draw Pile</string>
    <string name="discardPile">Discard Pile</string>
    <string name="noMessage">No message yet!</string>
    <string name="blank"></string>
    <string name="testing">testing</string>
    <string name="testingGoOutRoundInfo">P3 has gone out with: 3H, 3S, 3D, 3C, 4S, 5S, 6S, 7S, 9H, 10H, JH, QH, KH! Round 4 here we come!</string>
    <string name="scores">SCORES</string>
    <string name="scoreBoard">SCORE BOARD:</string>
    <string name="insert">Insert</string>
</resources>